# Comptextv7

./: .gitignore  AGENTS.md  DETERMINISM_REPORT.md  FORENSIC_AUDIT.md  GEMINI.md  GOLDEN_CORPUS.md  INDUSTRIAL_READINESS.md  PR_REVIEW_MATRIX.md  README.md  RECONSTRUCTION_DRIFT_REPORT.md  REPRODUCIBILITY.md  TOKEN_TELEMETRY_REPORT.md  VALIDATION_REPORT.md  package.json  plan.txt  program.md  pyproject.toml
.github/: pull_request_template.md
artifacts/: agent_trace_replay_results.json  paper_replay_results.json  token_latency_results.json
benchmarks/: industry_audit.py  run_industrial_audit.py  run_kvtc_v7_benchmarks.py  run_replay_continuity.py  run_validation_harness.py  token_latency_bench.py
contracts/: api-dashboard.schema.json  benchmark-summary.schema.json  hash-chilli-cloud-ci-result.schema.json  regression-summary.schema.json  sanitization-summary.schema.json
dashboard/: industrial_dashboard.py  industrial_validation_dashboard.py
docs/: AGENT_WORKFLOW.md  API_SURFACE.md  BENCHMARK_EXPLANATION.md  BENCHMARK_INTEGRATION.md  CROSS_REPO_RELEASE_CHECKLIST.md  DEMO_WALKTHROUGH.md  SHOWCASE_READINESS.md  ci_artifact_narrative.md  compression_signal_engine.md  decision_quality_score.md  deterministic_hashing.md  execution_event_log.md  iterative_replay_degradation.md  operational_replay_failure_taxonomy.md  paper_replay_benchmark.md  paper_replay_state_audit.md  reference_index_event_fingerprints.md  replay_artifact_writer.md  replay_snapshot_model.md  research_positioning.md  research_positioning_sources.md  semantic_reference_protocol.md  validation.md
(+166 files in other folders)
