[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "comptextv7"
version = "0.1.0"
description = "KVTC-V7 cognitive fabric for industrial log compression and interpretability."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "CompText V7 Team" }]
license = { text = "Proprietary" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools]
packages = ["src", "src.core", "src.interpretability", "src.agents", "src.copilot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
